@@ -1,3 +1,6 @@
+3555.	[bug]		Address theoretical race conditions in acache.c
+			(change #3553 was incomplete). [RT #33252]
+
 3554.	[bug]		RRL failed to correctly rate-limit upward
 			referrals and failed to count dropped error
 			responses in the statistics. [RT #33225]
